<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/menu_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/action_profile"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_account_circle_white_24dp" />

</menu>