<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/explore_list"
    android:name="com.openjitsu.android.openjitsu.ui.explore.ExploreListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.explore.ExploreListActivity"
    tools:listitem="@layout/explore_list_content" />